2006-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/c8051f020.h,
	* device/include/mcs51/c8051f040.h,
	* device/include/mcs51/c8051f060.h,
	* device/include/mcs51/c8051f120.h: added PS0, fixed bug 1589279
	* src/z80/gen.c (gencjneshort),
	* src/z80/peeph.def: applied patch 1571373, thanks Philipp Krause

2006-10-31 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
	  debugger/mcs51/configure: get readline version

2006-10-30 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/sdcdb.c: replaced hardcoded "/" with DIR_SEPARATOR_STRING
	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
	  debugger/mcs51/configure: locate readline even when cross compiling
	* support/scripts/sdcc.nsi: include readline5.dll into the setup package

2006-10-29 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/serial_IO.h: putchar() and getchar() using
	  serial port.

2006-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/malloc.h,
	* device/lib/calloc.c,
	* device/lib/free.c,
	* device/lib/malloc.c,
	* device/lib/realloc.c: moved definition of struct into sources
	* support/regression/tests/malloc.c: use void* for init_dynamic_memory()

2006-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/asx8051.dsp: corrected output directories
	* as/link/hc08: new directory for hc08 linker
	* as/hc08/aslink.h,             as/link/aslink.h,
	* as/hc08/aslink.mak,           as/link/hc08/aslink.mak,
	* as/hc08/clean.mk,             as/link/hc08/clean.mk,
	* as/hc08/link_hc08.dsp,        as/link/hc08/link_hc08.dsp,
	* as/hc08/lkaomf51.c,           as/link/hc08/lkaomf51.c,
	* as/hc08/lkarea.c,             as/link/hc08/lkarea.c,
	* as/hc08/lkdata.c,             as/link/hc08/lkdata.c,
	* as/hc08/lkelf.c,              as/link/hc08/lkelf.c,
	* as/hc08/lkihx.c,              as/link/hc08/lkihx.c,
	* as/hc08/lklibr.c,             as/link/hc08/lklibr.c,